fix safari flexwrap

--- a/app/assets/stylesheets/new/topics_index.css.scss
+++ b/app/assets/stylesheets/new/topics_index.css.scss
@@ -1,6 +1,6 @@
 .topics {
 	@include flexbox;
-	flex-wrap: wrap;
+	@include flex-wrap(wrap);
 	box-sizing: border-box;
 	padding: 20px;
 }
